<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/czesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_czesc"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/czesc_tekst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/czesc"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_czesc_tekst"
        android:textSize="15sp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/dlaczego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/czesc_tekst"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_dlaczego"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/dlaczego_tekst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dlaczego"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_dlaczego_tekst"
        android:textSize="15sp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/polecam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dlaczego_tekst"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_polecam"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/polecam_tekst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/polecam"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_polecam_tekst"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/jak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/polecam_tekst"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_jak"
        android:textSize="17sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/jak2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jak"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_jak2"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/jak_tekst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jak2"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_jak_tekst"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/podpis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jak_tekst"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/info_podpis"
        android:textSize="15sp"
        />
</RelativeLayout>

</ScrollView>